[package]
name = "rustkov"
authors = ["Kjolnyr <kjolnyr@protonmail.com>", "slippery nickels <redacted>"]
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Markov chain chatbot library"
repository = "https://github.com/kjolnyr/rustkov.git"
homepage = "https://github.com/kjolnyr/rustkov"
readme = "README.md"
keywords = ["chatbot", "markov", "bot"]


[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
bincode = "1.3.3"


[profile.dev.package."*"]
opt-level = 3
